--- a/pygments/pygmments-plugin-vse/pyproject.toml
+++ b/pygments/pygmments-plugin-vse/pyproject.toml
@@ -16,8 +16,8 @@ readme = "README.md"
 # See the attributes declared in example_lexer.py for how to configure the
 # language names and file patterns.
 
-#[project.entry-points."pygments.lexers"]
-#example_lexer = "example_lexer:ExampleLexer"
+[project.entry-points."pygments.lexers"]
+vse_lexer = "vse_lexer:ExternalLexer"
 
 # Declare plugin styles in this table. The key *is* significant: it is the name
 # the style will be recognized as. In this example, we can use
@@ -51,4 +51,4 @@ vse-style = "vse_style:VSE"
 #test = "pygmentize -l python style=vse-style"
 
 [tool.hatch.build.targets.wheel]
-packages = ["vse_style.py"]
+packages = ["vse_style.py", "vse_lexer.py"]
