--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,5 @@ dependencies = [
 vehicle-gui = "ui.__main__:main"
 
 [project.entry-points."pygments.lexers"]
-external = "external:ExternalLexer"
+external = "ui.external:ExternalLexer"
 
